--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
 
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/spaghettialpesto.html">Spaghetti al Pesto</a>
-    <a href="recipes/allanerano.html">Spaghetti Alla Nerano</a>
+
+    <ul>
+    <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="recipes/spaghettialpesto.html">Spaghetti al Pesto</a></li>
+    <li><a href="recipes/allanerano.html">Spaghetti Alla Nerano</a></li>
+    </ul>
+  
+    </html>
 </body>
-</html>
