--- a/recipes/spaghettialpesto.html
+++ b/recipes/spaghettialpesto.html
@@ -8,6 +8,7 @@
     <title>Spaghetti al Pesto</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>
     <h1>Spaghetti al Pesto</h1>
     <img 
     src="../pictures/pesto.jpg" 
