--- a/recipes/allanerano.html
+++ b/recipes/allanerano.html
@@ -8,6 +8,7 @@
     <title>Spaghetti Alla Nerano</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>
     <h1>Spaghetti Alla Nerano</h1>
     <img 
     src="../pictures/allanerano.jpg" 
